update stock transformer